--- a/src/style.css
+++ b/src/style.css
@@ -9,11 +9,6 @@ body {
   background-color: var(--background-color);
 }
 
-a {
-  text-decoration: none;
-  color: var(--primary-color);
-}
-
 h1,
 h2,
 h3 {
@@ -36,16 +31,54 @@ p {
   font-size: 13px;
 }
 
-.header {
+footer {
+  font-family: "Open Sans", sans-serif;
+  color: var(--primary-color);
+  font-size: 11px;
   margin: 20px 0;
+}
+
+.carousel {
+  margin: 20px auto;
+}
+
+.header {
+  margin: 20px 0 0 0;
+}
+
+footer,
+.header,
+#ueber-uns,
+#behandlungen,
+#preise {
+  padding: 0 10%;
 }
 
 .navigation {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   font-family: "Open Sans", sans-serif;
 }
 
-.ueber-uns {
+.navigation-item {
+  text-decoration: none;
+  color: var(--primary-color);
+  transition: text-shadow 0.2s;
+}
+
+.navigation-item:hover {
+  color: var(--heading-color);
+  text-shadow: 0 0 0.65px var(--heading-color), 0 0 0.65px var(--heading-color);
+}
+
+#ueber-uns {
   background-color: var(--background-color-dark);
+}
+
+img#kosmetikerinnen {
+  margin: 0px 0px 30px 0px;
+}
+
+.impressum-datenschutz {
+  text-align: right;
 }
