--- a/src/style.css
+++ b/src/style.css
@@ -73,6 +73,11 @@ footer {
   height: auto;
 }
 
+.map {
+  width: 100%;
+  height: 75%;
+}
+
 .background-grey {
   background-color: var(--background-color-dark);
 }
