--- a/src/style.css
+++ b/src/style.css
@@ -61,7 +61,7 @@ footer {
   color: var(--primary-color);
   font-size: 11px;
   margin: 20px 0;
-  padding: 0 10%;
+  padding: 0 15px;
 }
 
 .highlight {
@@ -127,5 +127,11 @@ p a {
 @media (max-width: 768px) {
   .reduced-spacing {
     margin-top: -60px;
+  }
+  footer {
+    padding: 0;
+  }
+  .impressum-datenschutz {
+    text-align: left;
   }
 }
