--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,11 @@ ul {
   font-size: 13px;
 }
 
+.col-3 {
+  text-align: right;
+  padding-right: 50px;
+}
+
 footer {
   font-family: "Open Sans", sans-serif;
   color: var(--primary-color);
@@ -125,6 +130,9 @@ p a {
 }
 
 @media (max-width: 768px) {
+  .col-3 {
+    padding-right: 20px;
+  }
   .reduced-spacing {
     margin-top: -60px;
   }
